<resources>
    <string name="app_name" translatable="false">Coin Countr</string>

    <string name="action_settings">Settings</string>
    <string name="appDescription" translatable="false">Coin Counter</string>
    <string name="total_title_">Title</string>
    <string name="notes200000edit" translatable="false">200 000</string>
    <string name="notes100000edit" translatable="false">100 000</string>
    <string name="notes50000edit" translatable="false">50 000</string>
    <string name="notes20000edit" translatable="false">20 000</string>
    <string name="notes10000edit" translatable="false">10 000</string>
    <string name="notes5000edit" translatable="false">5 000</string>
    <string name="notes2000edit" translatable="false">2 000</string>
    <string name="notes1000edit" translatable="false">1 000</string>
    <string name="notes500edit" translatable="false">500</string>
    <string name="notes200edit" translatable="false">200</string>
    <string name="notes100edit" translatable="false">100</string>
    <string name="notes50edit" translatable="false">50</string>
    <string name="notes20edit" translatable="false">20</string>
    <string name="notes10edit" translatable="false">10</string>
    <string name="notes5edit" translatable="false">5</string>
    <string name="notes1edit" translatable="false">1</string>
    <string name="coin2edit" translatable="false">2</string>
    <string name="coin1edit" translatable="false">1</string>
    <string name="cent50edit" translatable="false">.50</string>
    <string name="cent25edit" translatable="false">.25</string>
    <string name="cent20edit" translatable="false">.20</string>
    <string name="cent10edit" translatable="false">.10</string>
    <string name="cent5edit" translatable="false">.05</string>
    <string name="cent2edit" translatable="false">.02</string>
    <string name="cent1edit" translatable="false">.01</string>

    <string name="clear_all_title">Clear</string>
    <string name="feedback_title">Feedback</string>
    <string name="currency_title">Currency</string>
    <string name="language_title">Language</string>
    <string name="about_title">About</string>
    <string name="save_string">Save</string>
    <string name="check_if_empty_title_error">Can not save without a title.</string>
    <string name="check_if_empty_overlay_errror">Can not save when total is 0.</string>

    <string name="howto">Welcome to Coin Counter \n \n \nThank you for downloading my app. \n\nTo use: \n1. Count the amount of each coin you have. \n2. Input them into the app. \n3. Get the result! </string>
    <string name="howto_title">How To</string>

    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <string name="toolbar" translatable="false">Toolbar</string>

    <string name="overlay" translatable="false">0.00</string>
    <string name="title_activity_feedback">Feedback</string>

    <string name="countActivity">Count</string>

    <!-- Feedback screen strings -->
    <string name="feedback_name_edit">Name</string>
    <string name="feedback_email_edit">Email</string>
    <string name="feedback_comment_edit">Comment</string>
    <string name="feedback_submit">Submit</string>
    <string name="feedback_myemail" translatable="false">coincountr@gmail.com</string>
    <string name="rate_on_play">Rate on the Play store</string>
    <string name="title_activity_currency_selector">Currency</string>
    <string name="extraAdditionsedit" translatable="false"> </string>

    <!-- Currencies -->
    <string name="dollar" translatable="false">$</string>
    <string name="euro" translatable="false">€</string>
    <string name="pound" translatable="false">£</string>
    <string name="additions">Any other additions, in: </string>
    <string name="changed_curr">Changed currency to: </string>

    <string name="preference_file_key" translatable="false">com.karl.android.coincouter.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_language_selector">Language</string>
    <string name="show_string">Saves</string>
    <string name="locations_and_currency">Location and Currency</string>
    <string name="include_location_with_saves">Include location with saves</string>
    <string name="other">Other</string>
    <string name="allow_google_analytics">Allow Google Analytics</string>
    <string name="send_feedback">Send feedback</string>
    <string name="danger_zone">Danger zone</string>
    <string name="clear_all_data">Clear all data \nWarning: This can not be undone</string>
    <string name="detect_device_language">Detect device language</string>
    <string name="feature_currently_unavailable">Feature currently unavailable</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete everything?</string>
    <string name="done">Done!</string>
    <string name="changelog">Changelog</string>
    <string name="choose_an_email_application">Choose an email application</string>
    <string name="no_email_clients_installed">There are no email applications installed</string>
    <string name="error">Error</string>
    <string name="you_are_exiting_the_application">You are exiting the application</string>
    <string name="can_not_share_without_a_title">Can not share without a title</string>
    <string name="can_not_share_when_total_is_0">Can not share when total is 0</string>
    <string name="google_analytics_activated">Google Analytics activated.</string>
    <string name="google_analytics_deactivated">Google Analytics deactivated</string>
    <string name="are_you_sure_data_loss_inevidable">Are you sure you want to leave? Data entered will be erased unless saved.</string>
    <string name="sample_example">Holidays</string>
    <string name="your_total_is">Your total is</string>

    <!-- Language changed notifications -->
    <string name="lang_english">Changed language to English</string>

    <!-- Languages -->
    <string name="english" translatable="false">English</string>


    <string name="button_placeholder" translatable="false">Placeholder</string>
    <string name="description">Copyright of Karl Jones \n coincountr@gmail.com</string>
    <string name="title_activity_show_totals" translatable="false">ShowTotals</string>

    <string name="add_data_error">Error saving total</string>
    <string name="add_data_success">Saved</string>

    <!-- saves screen -->
    <string name="save_id">ID:</string>
    <string name="save_title">Title:</string>
    <string name="save_amount">Amount:</string>
    <string name="save_date">Date:</string>

    <string name="share_settings">Share</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title_activity_show_saves" translatable="false">ShowSaves</string>

    <string name="entry_deleted">Entry deleted</string>
    <string name="entry_not_deleted">Entry not deleted</string>
    <string name="delete">Delete</string>
    <string name="delete_entry">Delete entry</string>
    <string name="cancel">Cancel</string>
    <string name="enter_id_for_deletion">Please enter the ID of the entry you would like to delete</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreen</string>
    <string name="title_activity_search_results" translatable="false">SearchResults</string>
    <string name="title_activity_main_activity_new" translatable="false">MainActivityNew</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Main Activity strings -->
    <string name="navigation_item_my_saves">My Saves</string>
    <string name="navigation_item_my_groupings">My Groupings</string>
    <string name="navigation_item_currency_conversion">Currency Conversion</string>

    <!-- My Saves fragment -->
    <string name="my_saves_fragment_no_information_to_display">No Saves</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_choose_currency">Currency</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
