<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".OldMainActivity">

    <item
        android:id="@+id/action_clear_all"
        android:title="@string/clear_all_title"
        app:showAsAction="always"
        android:icon="@drawable/ic_clear_white_18dp"/>

    <item
        android:id="@+id/action_share_via_SMS"
        android:title="@string/share_settings"
        app:showAsAction="ifRoom"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_share_white_18dp"
        />

    <item
        android:id="@+id/action_main_settings"
        android:title="@string/action_settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings_white_18dp"/>
</menu>
