<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!-- My Saves -->
        <item
            android:id="@+id/navigation_drawer_my_saves"
            android:icon="@drawable/ic_local_library_black_24dp"
            android:title="@string/navigation_item_my_saves"/>
        <!-- My Groupings -->
        <item
            android:id="@+id/navigation_drawer_my_groupings"
            android:icon="@drawable/ic_collections_bookmark_black_24dp"
            android:title="@string/navigation_item_my_groupings"
            android:enabled="false"/>
        <!-- Currency Converter -->
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/navigation_item_currency_conversion"
            android:enabled="false"/>
    </group>
</menu>
