<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"> </include>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/OverlayTotal"
        android:fontFamily="sans serif"
        android:textSize="70sp"
        android:gravity="center"
        android:text="@string/overlay"
        android:elevation="4dp"
        android:clickable="true"
        android:onClick="make_a_toast"
        android:visibility="gone"
        />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:android.support.design="http://schemas.android.com/tools"
        android:id="@+id/ScrollView02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- form elements -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/FB1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android.support.design:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:maxLength="25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:fontFamily="sans-serif"
                    android:id="@+id/feedback_name"
                    android:hint="@string/feedback_name_edit"
                    android:inputType="textCapWords"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/FB3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android.support.design:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:maxLength="500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:fontFamily="sans-serif"
                    android:id="@+id/feedback_comment"
                    android:hint="@string/feedback_comment_edit"
                    android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_submit"
                android:onClick="send_feedback_email"
                style="?android:attr/borderlessButtonStyle"
                android:layout_gravity="right" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:text="@string/rate_on_play"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="rate_the_app"
        android:elevation="4dp"
        android:fontFamily="sans serif"
        android:focusable="false"
        android:longClickable="true"
        android:typeface="serif"
        android:visibility="visible" />
</LinearLayout>