<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"> </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/locations_and_currency"
                    android:id="@+id/textView"
                    android:textSize="30dp"
                    android:paddingTop="12dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#D3D3D3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/currency_title"
                    android:id="@+id/Currency"
                    android:paddingStart="10dp"
                    android:textColor="#666666"
                    android:textIsSelectable="false"
                    android:textSize="20dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/button2"
                    android:layout_gravity="right"
                    android:clickable="false"
                    android:textSize="12dp"
                    />
<!--
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/language_title"
                    android:id="@+id/Language"
                    android:paddingStart="10dp"
                    android:phoneNumber="true"
                    android:linksClickable="true"
                    android:textColor="#666666"
                    android:textSize="20dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:text="@string/detect_device_language"
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/button3"
                    android:layout_gravity="right"
                    android:textSize="12dp" />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/include_location_with_saves"
                    android:id="@+id/Location"
                    android:layout_weight="0.03"
                    android:paddingStart="10dp"
                    android:checked="false"
                    android:textSize="19dp"
                    android:textColor="#666666" /> -->
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/about_title"
                    android:id="@+id/textView3"
                    android:textSize="30dp"
                    android:paddingTop="12dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#D3D3D3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/howto_title"
                    android:id="@+id/button4"
                    android:paddingStart="10dp"
                    style="@style/ButtonLeft"
                    android:layout_gravity="left"
                    android:textAlignment="textStart"
                    android:textSize="16dp"
                    android:textColor="#666666"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title"
                    android:id="@+id/button5"
                    android:paddingStart="10dp"
                    style="@style/ButtonLeft"
                    android:layout_gravity="left"
                    android:textSize="16dp"
                    android:textAlignment="textStart"
                    android:textColor="#666666"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send_feedback"
                    android:id="@+id/button6"
                    android:paddingStart="10dp"
                    style="@style/ButtonLeft"
                    android:layout_gravity="left"
                    android:textSize="16dp"
                    android:textAlignment="textStart"
                    android:textColor="#666666"
                    android:textAllCaps="false"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Facebook"
                    android:id="@+id/button9"
                    android:paddingStart="10dp"
                    style="@style/ButtonLeft"
                    android:layout_gravity="left"
                    android:textSize="16dp"
                    android:textAlignment="textStart"
                    android:textColor="#666666"
                    android:textAllCaps="false"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Wordpress"
                    android:id="@+id/button10"
                    android:paddingStart="10dp"
                    style="@style/ButtonLeft"
                    android:layout_gravity="left"
                    android:textSize="16dp"
                    android:textAlignment="textStart"
                    android:textColor="#666666"
                    android:textAllCaps="false"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_on_play"
                    android:layout_gravity="left"
                    android:id="@+id/button8"
                    android:paddingStart="10dp"
                    style="@style/ButtonLeft"
                    android:textSize="16dp"
                    android:textAlignment="textStart"
                    android:textColor="#666666"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.06"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/danger_zone"
                    android:id="@+id/textView4"
                    android:textSize="30dp"
                    android:paddingTop="12dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#D3D3D3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_all_data"
                    style="@style/ButtonLeft"
                    android:layout_gravity="left"
                    android:id="@+id/button7"
                    android:textAlignment="textStart"
                    android:textSize="16dp"
                    android:textColor="#666666"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
